--- a/lib-docs/jade/tests/static.jade
+++ b/lib-docs/jade/tests/static.jade
@@ -42,6 +42,20 @@ html
       .navbar
         nav
           ul
+            li.navbar-title
+              h1 Title
+            li: a(href="#") Home
+
+      .navbar
+        nav
+          ul
+            li.navbar-title
+              h1 Title
+
+
+      .navbar
+        nav
+          ul
             li: a(href="#") Home
 
       .navbar
