Fixing bug caused by previous fix

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -300,6 +300,8 @@
             bottom: (2 * map-get($rootElement, paddingV))
             left: map-get($rootElement, paddingH)
             right: map-get($rootElement, paddingH)
+
+        &.navbar-title > h1
           line-height: normal
 
   @if ($layout == 'fluid')
