--- a/lib-docs/jade/_layout.jade
+++ b/lib-docs/jade/_layout.jade
@@ -46,19 +46,20 @@ html(lang='en')
 
       main.main
         block content
+        .push
 
-      - if (showFooter == true)
-        footer.main 
-          - var xml = fs.readFileSync('lib-docs/img/everythingio.svg')
-          
-          .wrapper
-            p
-              span.eio-logo!= xml
-              |  Made by&nbsp;
-              a(href="http://twitter.com/everythingdotio") Everything
+    - if (showFooter == true)
+      footer.main 
+        - var xml = fs.readFileSync('lib-docs/img/everythingio.svg')
+        
+        .wrapper
+          p
+            span.eio-logo!= xml
+            |  Made by&nbsp;
+            a(href="http://twitter.com/everythingdotio") Everything
 
-      - else
-        script(src="/js/navbar-fixer.js")
+    - else
+      script(src="/js/navbar-fixer.js")
     block preJS
 
     script(src="/js/docs.js")
