--- a/lib-docs/jade/docs/4.x/index.jade
+++ b/lib-docs/jade/docs/4.x/index.jade
@@ -1,15 +1,19 @@
-extends ../../_fullpage-layout
+extends ../../_layout
 
 block variables
   - var showFooter = true
   - var title = "Future"
 
+block page-stylesheet 
+  link(rel="stylesheet" href="/css/pages/docs/index.css")
+
 block content
-  :markdown
-    # Kickstart Future
+  .wrapper
+    :markdown
+      # Kickstart Future
 
-    With the future of Kickstart, I'm taking an unconventional approach by
-    actively prototyping the next version via documentation.
+      With the future of Kickstart, I'm taking an unconventional approach by
+      actively prototyping the next version via documentation.
 
-    With the recent release of Kickstart 3, there's not much to say at this
-    time, but stay tuned.
+      With the recent release of Kickstart 3, there's not much to say at this
+      time, but stay tuned.
