Catching one more pattern of failure for the dropdown button

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -191,7 +191,7 @@
         ul
           display: none
 
-        &.menu-item.open ul
+        &.menu-item.open ul, .menu-item.open ul
           display: block
 
         &.menu-item // Added via k$.nav()
