Tabs can be instantiated automatically now.

--- a/lib-docs/jade/tests/static.jade
+++ b/lib-docs/jade/tests/static.jade
@@ -1,7 +1,7 @@
 doctype html5
 html
   head
-    link(rel="stylesheet" href="/css/kickstart.css")
+    link(rel="stylesheet" href="../css/kickstart.css")
     script(src="/js/kickstart.js")
     style.
       .column-example { 
