--- a/lib-docs/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/tabs/index.jade
@@ -21,6 +21,8 @@ block documents
         sections will automatically show and hide as you would expect from
         a tabbed content area.
 
+        Remember the `data-ks-tabs` attribute.
+
       ul.tabs#tab-example2
         li.open: a(href="#modern") Modern
         li: a(href="#old") Old
@@ -35,7 +37,7 @@ block documents
       :markdown
         <span>
 
-            <ul class="tabs" id="ages">
+            <ul class="tabs" id="ages" data-ks-tabs>
               <li class="open">
                 <a href="#modern">Modern</a>
               </li>
@@ -73,7 +75,9 @@ block documents
   .document
     article.article
       :markdown
-        You'll also need to tell `k$.tabs()` the selector of the ul that will become the tab bar.
+        Optionally, you can omit the data attribute and instantiate the tabs via `k$.tabs()` 
+        Pass in either the string that selects the selector of the ul that will become the tab bar,
+        or the element itself.
 
     article.code
       :markdown
@@ -81,6 +85,7 @@ block documents
 
             k$.tabs('#ages');
 
-block postDocsJS
-  script.
-    k$.tabs('#tab-example2')
+            // or
+            
+            $tabs = document.querySelector('#ages');
+            k$.tabs($tabs);
