Fixing weird appearance of extension previews on home page

--- a/lib-core/sass/core/components/_containers.sass
+++ b/lib-core/sass/core/components/_containers.sass
@@ -67,7 +67,7 @@
 
   +container-color-default($color)
 
-=thumbnail-content-default($breakpoint: $desktop)
+=thumbnail-content-default($breakpoint: $tablet)
   display: block
   overflow: hidden
   margin-bottom: $space
