adding redirect and updating routes for CDN

--- a/lib-docs/jade/docs/3.x/index.jade
+++ b/lib-docs/jade/docs/3.x/index.jade
@@ -22,11 +22,11 @@ block documents
       p Or download kickstart.css and kickstart.js and include in your html file.
 
       p
-        a.button.button-primary(href="http://cdn.getkickstart.com/css/kickstart.min.css")
+        a.button.button-primary(href="http://cdn.everything.io/kickstart/3.x/css/kickstart.min.css")
           span.fa.fa-cloud-download
           |  kickstart.css
         | &nbsp;
-        a.button.button-primary(href="http://cdn.getkickstart.com/js/kickstart.min.js")
+        a.button.button-primary(href="http://cdn.everything.io/kickstart/3.x/js/kickstart.min.js")
           span.fa.fa-cloud-download
           |  kickstart.js
     article.code 
