Updating store link

--- a/lib-docs/jade/_header.jade
+++ b/lib-docs/jade/_header.jade
@@ -13,7 +13,7 @@
 
     ul
       li
-        a(href="http://kickstart-store.com") 
+        a(href="http://store.everything.io") 
           span.fa.fa-cubes
           | Store
       li
