--- a/lib-docs/jade/_layout.jade
+++ b/lib-docs/jade/_layout.jade
@@ -74,3 +74,5 @@ html(lang='en')
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); 
       ga('create', 'UA-1315296-26', 'auto');
       ga('send', 'pageview'); 
+    // script(src="//cdn.polyfill.io/v1/polyfill.min.js" async defer)
+
