--- a/lib-docs/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/adding-extensions/index.jade
@@ -36,7 +36,7 @@ block documents
 
         All submodules should be installed *at the same level as core/*
 
-        On the [Kickstart Store](http://kickstart-store.com), each extension has a submodule creation
+        On the [Kickstart Store](http://kickstart.everything.io), each extension has a submodule creation
         command that should look something like the code you see here.
 
         Running this in the terminal will create a folder (in this case "switch") and will download the
