--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -60,7 +60,7 @@ block content
               h2 by Claire Maddox
         p 
           | The library is just the core. Kickstart is designed to be extended and themed via the&nbsp;
-          a(href="http://kickstart-store.com") Kickstart Store
+          a(href="http://kickstart.everything.io") Kickstart Store
           | .
 
   article.home-wrapper 
