--- a/lib-docs/jade/about/index.jade
+++ b/lib-docs/jade/about/index.jade
@@ -34,5 +34,5 @@ block content
         everyone else's?
 
       Extensibility is a #1, unfulfilled need in the world of frameworks.  Kickstart is solving this
-      with its own native solution, the [Kickstart Store](http://kickstart-store.com).
+      with its own native solution, the [Kickstart Store](http://kickstart.everything.io).
 
