Adding correct data attribute to navbars

--- a/lib-docs/jade/_header.jade
+++ b/lib-docs/jade/_header.jade
@@ -1,4 +1,4 @@
-.main-navigation(data-ks-nav)
+.main-navigation(data-ks-navbar)
   nav
     ul
       - var xml = fs.readFileSync('lib-docs/img/kickstart.svg')
