Trying to make real change in the world.

--- a/lib-docs/jade/docs/3.x/_layout.jade
+++ b/lib-docs/jade/docs/3.x/_layout.jade
@@ -56,4 +56,5 @@ block content
       section.document-container
         block documents
 
-  block postDocsJS
+  block postJS
+    block postDocsJS
