--- a/lib-docs/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/tabs/index.jade
@@ -23,7 +23,7 @@ block documents
 
         Remember the `data-ks-tabs` attribute.
 
-      ul.tabs#tab-example2
+      ul.tabs#tab-example2(data-ks-tabs)
         li.open: a(href="#modern") Modern
         li: a(href="#old") Old
         li: a(href="#ancient") Ancient
