--- a/lib-core/sass/core/_grid.sass
+++ b/lib-core/sass/core/_grid.sass
@@ -54,7 +54,7 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
 
 =row
   display: inline-flex
-  width: 100%
+  width: calc(100% + #{$grid-gutter})
   justify-content: flex-start
   align-items: stretch
   flex-wrap: wrap
