--- a/lib-docs/sass/pages/index.sass
+++ b/lib-docs/sass/pages/index.sass
@@ -93,7 +93,7 @@ section.blue
     +column('half')
 
   .code
-    display: flex
+    display: inline-flex
     flex-direction: row
     flex-wrap: wrap
     align-content: stretch
