--- a/templates/new/views/layout.jade
+++ b/templates/new/views/layout.jade
@@ -22,7 +22,7 @@ html(lang='en')
           li
 
             // Copyright: Edit this in app.coffee
-            a(href="#") &copy; #{yourname}
+            a(href="http://twitter.com/everythingdotio") By Everything.io
 
         ul.nav.navbar-nav.pull-right
           li
