--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -98,6 +98,12 @@ iframe.animation
   margin-bottom: 25px
   overflow: hidden
 
+// Icons
+// -----
+
+svg.icon
+  +icon
+
 // Components
 // ----------
 
