Correcting svg export

--- a/lib-docs/jade/docs/3.x/ui/icons-hidden/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/icons-hidden/index.jade
@@ -11,6 +11,9 @@ block variables
   - var title = "Icons"
 
 block documents
+
+  include ../../../../../../docs/svgs/icons-responsive.svg
+
   .document
     article.article.article-full
       :markdown
