Clarifying some more.

--- a/lib-docs/jade/docs/3.x/ui/icons-hidden/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/icons-hidden/index.jade
@@ -42,7 +42,7 @@ block documents
     article.article
       :markdown
         ## Use a single fidelity
-        ### Link directly
+        ### Method 1: Link directly
 
         Icons come in the fidelities Small, Regular, and Large.
 
@@ -63,7 +63,7 @@ block documents
   .document
     article.article
       :markdown 
-        ### Use a "sprite"
+        ### Method 2: Use a "sprite"
 
         Img tags aren't ideal when using multiple icons on a page because it adds to the number
         of HTTP requests needed to display the entire page.
@@ -141,7 +141,7 @@ block documents
   .document
     article.article
       :markdown 
-        #### Method 2: Use linked SVG definition
+        #### Method 2: Use a "sprite"
 
         This method is identical to what we did with the single fidelity icon above, however
         there are important performance considerations to make here.
