Greatly improving sass compilation time

--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -15,7 +15,7 @@ html, body
   height: 100%
 
 body
-  // background-color: map-get($white, darkest)
+  background-color: map-get($white, darkest)
 
 .wrapper
   +wrapper
