Using minified versions of stylesheets

--- a/lib-docs/jade/_layout.jade
+++ b/lib-docs/jade/_layout.jade
@@ -14,7 +14,7 @@ include _mixins
 
 html(lang='en')
   head
-    link(rel="stylesheet" href="/css/docs.css")
+    link(rel="stylesheet" href="/css/docs.min.css")
     block page-stylesheet
     link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no")
