--- a/lib-docs/jade/docs/3.x/_layout.jade
+++ b/lib-docs/jade/docs/3.x/_layout.jade
@@ -7,7 +7,7 @@ block page-stylesheet
   block ui-stylesheet
   script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
   link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/solarized_dark.min.css")
-  link(rel="stylesheet" href="/css/pages/docs/index.css")
+  link(rel="stylesheet" href="/css/pages/docs/index.min.css")
   script.
     hljs.initHighlightingOnLoad(); 
 
