--- a/lib-docs/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/buttons/index.jade
@@ -10,7 +10,7 @@ block variables
   - var title = "Buttons" 
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/buttons.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/buttons.min.css")
 
 block hero-title
   h1 Buttons
