--- a/lib-docs/jade/docs/3.x/ui/icons-hidden/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/icons-hidden/index.jade
@@ -4,7 +4,7 @@ block hero-title
   h1 Icons
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/icons.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/icons.min.css")
 
 block variables
   - var showFooter = false
