--- a/lib-docs/jade/docs/3.x/ui/modals/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/modals/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Modals"
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/modals.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/modals.min.css")
 
 block documents
   .document
