--- a/lib-docs/jade/docs/3.x/ui/tables/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/tables/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Tables"
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/tables.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/tables.min.css")
 
 block documents
   .document
