--- a/lib-docs/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/tabs/index.jade
@@ -8,7 +8,7 @@ block hero-title
   h1 Tabs
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/tabs.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/tabs.min.css")
 
 block documents
   .document
