--- a/lib-docs/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/tooltips/index.jade
@@ -5,7 +5,7 @@ block variables
   - var title = "Tooltips"
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/tooltips.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/tooltips.min.css")
 
 mixin colors
   p
