--- a/lib-docs/jade/docs/3.x/ui/alerts/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/alerts/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Alerts" 
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/alerts.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/alerts.min.css")
 
 block documents
   .document
