--- a/lib-docs/jade/docs/3.x/ui/containers/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/containers/index.jade
@@ -8,7 +8,7 @@ block hero-title
   h1 Containers
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/containers.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/containers.min.css")
 
 block documents
   .document
