--- a/lib-docs/jade/docs/3.x/ui/forms/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/forms/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Forms"
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/forms.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/forms.min.css")
 
 block documents
   .document
