--- a/lib-docs/jade/docs/3.x/ui/labels/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/labels/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Labels"
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/labels.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/labels.min.css")
 
 block documents
   .document
