--- a/lib-docs/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/navigation/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Navigation"
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/navigation.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/navigation.min.css")
 
 block documents
   .document
