--- a/lib-docs/jade/docs/3.x/ui/notifications/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/notifications/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Notifications" 
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/notifications.css") 
+  link(rel="stylesheet" href="/css/pages/docs/ui/notifications.min.css") 
 
 block documents
   .document 
