--- a/lib-docs/jade/docs/3.x/ui/typography/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/typography/index.jade
@@ -8,7 +8,7 @@ block variables
   - var title = "Typography"
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/typography.css") 
+  link(rel="stylesheet" href="/css/pages/docs/ui/typography.min.css") 
 
 block documents
   .document
