--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -1,7 +1,7 @@
 extends _layout
 
 block page-stylesheet
-  link(rel="stylesheet" href="/css/pages/index.css")
+  link(rel="stylesheet" href="/css/pages/index.min.css")
 
 block hero
   header.index-hero
