Restoring footer and including minification into watch

--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -65,6 +65,8 @@ footer.main
   background: darken(map-get($colors, blue), 15%)
   padding: $space 0
   color: white
+  position: relative
+  z-index: 9
 
   p
     text-align: center
