Removing hero, adding note about tooltip extension, and fixing navbar colors

--- a/lib-docs/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/tooltips/index.jade
@@ -65,6 +65,12 @@ block documents
       :markdown
         ## Optional trigger
 
+      .notice
+        :markdown
+          Tooltip triggers require the [Tooltip Trigger extension](http://kickstart.everything.io), 
+          available in the Kickstart Store.
+
+      :markdown
         By default, the trigger and the anchor are the same element. However,
         an optional <span class="ifnot-semantic"><code>.tooltip_trigger</code> class</span>
         <span class="if-semantic"><code>tooltip-trigger()</code> mixin</span> is available.
