--- a/lib-core/sass/core/components/_dropdown_menu.sass
+++ b/lib-core/sass/core/components/_dropdown_menu.sass
@@ -28,6 +28,7 @@
 
         a:not([role=button])
           +button-size-default(1)
+          color: inherit
           display: block
           margin-bottom: 0
           border-radius: 0
