Changing some instances of Kickstrap to kickstart

--- a/lib-docs/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/adding-extensions/index.jade
@@ -237,7 +237,7 @@ block documents
 
             //  Kickstart Semantic
             //  ==================
-            //  This is just a starter file for using Kickstrap via Sass
+            //  This is just a starter file for using Kickstart via Sass
             //  Rename this file to something you like (e.g. style.sass) and import it by
             //  the same .css name from your html/jade file.
 
